--- a/henry.html
+++ b/henry.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
+  
+  <head>
+    <title>
+      Page #2
+    </title>
 
 <style>
 
@@ -7,6 +12,8 @@ body{background-color:gray;}
 p, h1, li{color:white}
 
 </style>
+    
+  </head>
 
 <h1>
 This is what he looks like!
