--- a/henry.html
+++ b/henry.html
@@ -18,6 +18,6 @@ p, h1, li{color:white}
 <h1>
 This is what he looks like!
 </h1>
-<img src="Henry3.jpg"> <br>
+<img src="henry3.jpg"> <br>
 <img src="Henry.jpg"> <br>
 <img src="henry2.jpg"> <br>
